<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_tab"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_new_tab"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_external_url"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_external_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
